--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -1,21 +1,23 @@
+\pagebreak
+
 # LESSONS LEARNED FROM CASE STUDY APPLICATIONS
 
 The three SMUs used as case studies were selected to represent a range of levels of data availability, ranging from data-rich to data-limited. For each case study, the set of LRP estimation methods considered (Table \@ref(tab:lrpapproaches)) was a function of available data and previously developed assessment methods for the SMU. Each case study section includes its own discussion section highlighting conclusions from that case study. In this section, we provide an summary of key lessons learned when looking across all three case studies. These lessons were used to inform the development of guidelines for defining LRPs for Pacific Salmon SMUs, as described in Holt et al. (in review).
 
 
-**Lesson 1: Proportional LRPs based on the multidimensional algorithm within the Salmon Scanner could be readily estimated for all SMUs, regardless of data availability, and were consistent with the multidimensional approach that has been developed for Wild Salmon Policy assessments.  This was not the case for aggregate abundance LRPs.**
-<!--CH 1 Feb. I guess my one concern about this is missing the idea of data deficiencies. It can't estimate status when CUs are DD and status cannot be inferred. Perhaps this caveat is obvious though? In the bolded lesson above, we could change "regardless of data availability" to "over a wide range of data availabilities"-->
-Proportional LRPs based on the Salmon scanner could be applied in all three case studies; whereas aggregate-abundance methods required a strong positive relationship between observed aggregate abundance and the log-odds of all CUs being above their lower benchmarks (logistic regression LRP) and / or sufficient data to parameterize a population dynamics model (projection LRP).  While the Interior Fraser Coho case study met both of these requirements, WCVI Chinook could only meet the second, and ISC Chum could not meet either of them. The use of the Pacific Salmon Scanner tool to estimate multidimensional statuses <!--CH 1 FEb. added last 2 words-->for proportional LRPs was especially valuable for data-poor SMUs because it allowed a mix of data quality and benchmark types to be applied, depending on what was available for a given CU in a given year. For example, in the ISC Chum case study, applying the Salmon Scanner to develop proportional LRPs allowed all seven CUs to be included when assessing SMU status by using alternative trend-based metrics for CUs without percentile benchmarks. The ability to assess CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy, as was the case for ISC Chum. 
+**Lesson 1: Proportional LRPs based on the multidimensional algorithm within the Salmon Scanner could be readily estimated for all SMUs over a wide range of data availabilities, and were consistent with the multidimensional approach that has been developed for Wild Salmon Policy assessments.  This was not the case for aggregate abundance LRPs.**
+
+Proportional LRPs based on the Salmon scanner could be applied in all three case studies; whereas aggregate-abundance methods required a strong positive relationship between observed aggregate abundance and the log-odds of all CUs being above their lower benchmarks (logistic regression LRP) and / or sufficient data to parameterize a population dynamics model (projection LRP).  While the Interior Fraser Coho case study met both of these requirements, WCVI Chinook could only meet the second, and ISC Chum could not meet either of them. The use of the Pacific Salmon Scanner tool to estimate multidimensional statuses for proportional LRPs was especially valuable for data-poor SMUs because it allowed a mix of data quality and benchmark types to be applied, depending on what was available for a given CU in a given year. For example, in the ISC Chum case study, applying the Salmon Scanner to develop proportional LRPs allowed all seven CUs to be included when assessing SMU status by using alternative trend-based metrics for CUs without percentile benchmarks. The ability to assess CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy, as was the case for ISC Chum. 
 
 
 **Lesson 2: Annual status estimates from aggregate abundance LRPs and proportional LRPs will differ from each other in some cases.**
 
-While annual status estimates from aggregate abundance methods were generally consistent with estimates from proportional methods using the recommended Salmon Scanner tool, they did not always match. For the Interior Fraser Coho case study, status tended to drop below proportional LRPs when abundance of individual CUs was low, and drop below aggregate abundance LRPs when aggregate abundances were low.  While these conditions corresponded in most years, they did not always.  <!--CH 1 Feb. added that these results are from IFR-->For our case study on Interior Fraser River Coho, we found that the proportion of years with matching status estimates for proportional and aggregate abundance LRPs ranged from 72-86%, depending on the method used to estimate CU status.
+While annual status estimates from aggregate abundance methods were generally consistent with estimates from proportional methods using the recommended Salmon Scanner tool, they did not always match. For the Interior Fraser Coho case study, status tended to drop below proportional LRPs when abundance of individual CUs was low, and drop below aggregate abundance LRPs when aggregate abundances were low.  While these conditions corresponded in most years, they did not always. For our case study on Interior Fraser River Coho, we found that the proportion of years with matching status estimates for proportional and aggregate abundance LRPs ranged from 72-86%, depending on the method used to estimate CU status.
 
 
 **Lesson 3:  Data from all component CUs should be used whenever possible. When data are missing from one or more CUs, careful consideration should be given to the question of whether status can be inferred from other CUs within the SMU.  While there may be cases where inference is possible, uncertainty in resulting status estimates will increase, and this uncertainty should be clearly communicated in status assessments.**
 
-In the case of ISC Chum, using data from all seven CUs when available (even if only a subset of years) resulted in status dropping below the LRP more frequently than when only a subset of CUs was used in all years. This result occurs because, for proportional LRPs, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. Adding additional CUs may decrease status from above to below the LRP if the additional CU is Red and all other CUs are Amber or Green. However, adding an additional CU will never increase status from below to above an LRP because if a Red CU already exists<!--CH 1 FEb. I think you can omit:", adding a new Amber or Green CU will not make a difference"-->; the 100% threshold for all CUs to be above Red cannot be met in this case. Given that ISC Chum CUs have low correlations in among-CU spawner abundances over time, and experience different environmental drivers in their freshwater habitats, inferring status of missing CUs from other CUs with data is not recommended. Therefore, status estimates that only include a portion of CUs are potentially biased.  
+In the case of ISC Chum, using data from all seven CUs when available (even if only a subset of years) resulted in status dropping below the LRP more frequently than when only a subset of CUs was used in all years. This result occurs because, for proportional LRPs, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. Adding additional CUs may decrease status from above to below the LRP if the additional CU is Red and all other CUs are Amber or Green. However, adding an additional CU will never increase status from below to above an LRP because if a Red CU already exists; the 100% threshold for all CUs to be above Red cannot be met in this case. Given that ISC Chum CUs have low correlations in among-CU spawner abundances over time, and experience different environmental drivers in their freshwater habitats, inferring status of missing CUs from other CUs with data is not recommended. Therefore, status estimates that only include a portion of CUs are potentially biased.  
 
 In the case of Interior Fraser Coho, results from missing data scenarios for the logistic regression approach showed that it may be possible to use data-rich CUs as indicators for CUs with missing data.  However, logistic regression-based LRPs were more uncertain when more than 1 CUs was missing, and the logistic regression model frequently failed to converge, so caution should be used when applying this method to SMUs with missing data.  Furthermore, Interior Fraser Coho display higher levels of among-CU correlations in spawner abundances over time that ISC Chum, so the extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
 
