--- a/caseStudyWP/appendix-coho.Rmd
+++ b/caseStudyWP/appendix-coho.Rmd
@@ -26,7 +26,9 @@ Finally, we use the estimated S~REP~, which is the spawner abundance at which th
 Based on similarities in threats, life history, population capacity, and some shared environmental drivers (i.e., lower Fraser River, estuary, and marine environments), we found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses, especially when data from several other CUs are available to represent the missing CU. However, the large diversity in environmental conditions on land, Biogeoclimatic zones, and unique weather events, combined with the generally large areas encompassed by each CU, does require careful consideration when inferring CU status. For example, consideration may be required when environmental catastrophes occur that only impact individual CUs, or parts of CUs, such as landslides, floods, droughts, and forest fires; depending on the duration of the impacts of such events. An example of a recent catastrophic event is the Big Bar landslide, which only impacted one subpopulation within the Middle Fraser CU.If the impacts of this slide persist without mitigation, the status of the Middle Fraser CU would likely not be coupled with adjacent CUs. We also note that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.
 
 
-## Parameter Estimates from Bayesian Stock Recruitment Models
+\newpage
+
+## Bayesian Stock Recruitment Model Parameter Estimates
 
 
 ```{r coho-SrepPrior, fig.cap="Prior distribution for SRep (the spawner abundance level at which the stock replaces itself) used when fitting the Ricker\\_priorCap model. The red dashed line shows the maximum likelihood estimate of SRep from the base Ricker model stock recruitment fit. The mean of the SRep prior was set to 1.4 times the maximum likelihood estimate", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
@@ -34,12 +36,13 @@ knitr::include_graphics("figure/coho-SrepPriorDist.png")
 ```
 
 
-\newpage
 
 
 <!--To Do: To Do: improve table formatting so that differnt number of digits for different variables
-CH: could do after submission to TWG, if required at all?
 -->
+
+
+\newpage
 
 ```{r coho-postSummary-Ricker, warning=FALSE, echo=FALSE}
 
@@ -68,8 +71,11 @@ csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterio
  
 ```
 
-
-
+\
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 
 ```{r coho-Ricker-alphaPosts, fig.cap="Posterior distributions for Ricker $\\alpha$ parameters, by CU, obtained from fitting the base Ricker stock recruitment model.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
 knitr::include_graphics("figure/coho-alphaPosts.png")
@@ -95,7 +101,6 @@ knitr::include_graphics("figure/coho-adjProdPosts-priorCap.png")
 
 
 \newpage
-
 
 ## Projected Spawner Abundances used for the Projection LRP Method
 
