--- a/caseStudyWP/appendix-samSim.Rmd
+++ b/caseStudyWP/appendix-samSim.Rmd
@@ -8,7 +8,7 @@
 
 # samSim MODEL DOCUMENTATION {#app:samsim-appendix}
 
-`samSim` is the closed loop simulation modelling tool used for calculation of the projection-based LRPs. An overview of `samSim` and the code can be found in the LRP project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). samSim has been previously used to evaluate harvest control rule performance relative to recovery potential ([@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]). We created a modified version of samSim to support LRP estimation for this paper. 
+`samSim` is the closed loop simulation modelling tool used for calculation of the projection-based LRPs. An overview of `samSim` and the code can be found in the LRP project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). samSim has been previously used to evaluate harvest control rule performance relative to recovery potential [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation for this paper. 
 
 Updated functionality for the LRP version of samSim include:
 
@@ -19,12 +19,11 @@ Updated functionality for the LRP version of samSim include:
 
 * The option to initialize population dynamics for individual CUs at unfished equilibrium when historical recruitment data are not available. While this option would not be appropriate for projections aimed at estimating recovery from a current state, it can be used to estimate projection-based LRPs because we are only interested in the underlying relationship between aggregate abundance and the probability individual CUs will be above their lower benchmark at equilbrium levels.
 
-* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$} rather than zero when recruitment deviations are normally distributed (@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, ^[Weir, L., et al. (in press). Recovery Potential Assessment for 11 Designatable Units of Chinook Salmon, Oncorhynchus tshawytscha, Part 2: Elements 12 to 22. DFO Can. Sci. Advis. Sec. Res. Doc.  viii + 126 p.]. When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
+* The option to include a log-normal bias-correction factor of $-\sigma^2 / 2$ to recruitment projected using one of the two available Ricker stock recruit models. This option was added to accommodate cases in which samSim is parameterized using stock recruitment parameters that have been corrected for log-normal bias to represent expected (mean) parameters. The log-nomral bias correction is commonly applied in stock recruit modelling because the expected value of *e*^$\sigma$ is *e*^$\sigma^2 / 2$ rather than zero when recruitment deviations are normally distributed [@coxCandidateLimitReference2019, @ohlbergerBayesianLifecycleModel2019, @olmosEvidenceSpatialCoherence2019, @forrestAssessmentPacificCod2020, ^[Weir, L., et al. Recovery Potential Assessment for 11 Designatable Units of Chinook Salmon, Oncorhynchus tshawytscha, Part 2: Elements 12 to 22. DFO Can. Sci. Advis. Sec. Res. Doc.  In press]]. When input parameters have been corrected for this log-normal bias, the bias correction must also be added to projections.  We use a log-normal bias correction factor for all of our case study analyses.
 
 * Specification of variability in exploitation rates as a function of both variability among years and variability among CUs.
 
-This appendix describes the `samSim` model equations and the structure. We focus on providing detailed descriptions of the modeling options used for LRP study cases but include brief mentions of other model extensions already implemented within `samSim`. `samSim` includes two population scales, which can be applied to one Conservation Unit (CU) with component spawning populations or one Stock Management Unit (SMU, referred to as Management Unit, MU in the `samSim` code and this Appendix) with component CUs. For the projection-based LRP analysis two SMUs and their component CUs were used as study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). The following sections in this appendix are organized similarly to the `samSim` code, for this reason the subheadings of this appendix can be read as pseudo code. The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating population trends based on input parameters. The projection phase generates data for future years based on the input data and parameters as well as the user defined scenarios and management procedures. Model indicies are defined in Table \@ref(tab:indtab), model parameters and inputs are defined in Table \@ref(tab:paramtab) and the modeled quantities are defined in Table \@ref(tab:modtab). Detailed definitions of the input data and parameters are provided in the repository's [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme) file. 
-
+This appendix describes the `samSim` model equations and the structure. We focus on providing detailed descriptions of the modeling options used for LRP study cases but include brief mentions of other model extensions already implemented within `samSim`. `samSim` includes two population scales, which can be applied to one Conservation Unit (CU) with component spawning populations or one Stock Management Unit (SMU; referred to as Management Unit, MU, in the `samSim` code and this appendix) with component CUs. For the projection-based LRP analysis two SMUs and their component CUs were used as study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with three CUs) and the Interior Fraser Coho Salmon SMU (with five CUs). The following sections in this appendix are organized similarly to the `samSim` code, for this reason the subheadings of this appendix can be read as pseudo code. The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating population trends based on input parameters. The projection phase generates data for future years based on the input data and parameters as well as the user defined scenarios and management procedures. Model indicies are defined in Table \@ref(tab:indtab), model parameters and inputs are defined in Table \@ref(tab:paramtab) and the modeled quantities are defined in Table \@ref(tab:modtab). Detailed definitions of the input data and parameters are provided in the repository's [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme) file. 
 
 \begin{table}[ht]
 \centering
@@ -48,6 +47,7 @@ $n$ & Nation: U.S. or Canada \\
 
 
 <!--CH: I added 1/spawners at maximum recruitment to beta defn.-->
+\newpage
 
 \begin{longtable}[]{l p{13.5cm}}
 \caption{List of \texttt{samSim} model parameters and user input variables.}\\
@@ -83,6 +83,7 @@ $\hat{\beta}_{y,i}$ & Estimated Ricker inverse capacity parameter \\
 
 
 <!--CH: In samSim, I think we call calendar recruitment, 'returns'. I've added this in parentheses below to help with cross-checking against code. -->
+\newpage
 
 \begin{longtable}[]{l p{13.5cm}}
 \caption{List of \texttt{samSim} model variables.}\\
